<?xml version="1.0"?>
<package>
  <name>aslam_sample_consensus</name>
  <version>0.0.1</version> 
  <description>aslam_sample_consensus</description>
  <maintainer email="paul.furgale@mavt.ethz.ch">Paul Furgale</maintainer>
  <author>Paul Furgale</author>
  <license>New BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen_catkin</build_depend>
</package>
